--- a/Mirasımızstil.css
+++ b/Mirasımızstil.css
@@ -1,11 +1,33 @@
+ body {
+    background: #a8aeb94d;
+  }
+
 .başlık{
     background-color: rgba(38, 81, 26, 0.883);
     text-align: center;
     color: rgba(245, 245, 245, 0.979);
     margin-top: 1px;
 }
-footer{
-    text-align: end;
-    padding-right:20px;
+h3{
+  color: rgba(1, 40, 1, 0.916);
+  background-color: rgba(220, 214, 112, 0.783);
+  text-align: center;
+}
+
+  a{
+    color: blue;
   }
+.tanıtım{
+  background-color: rgba(255, 255, 255, 0.663);
+  border-radius: 10px;
+  box-shadow: 0px 5px 5px 0px rgba(16, 16, 22, 0.585);
   
+}
+p{
+  color: black;
+}
+footer{
+  text-align: end;
+  padding-right:20px;
+} 
+
