--- a/girisstil.css
+++ b/girisstil.css
@@ -1,6 +1,9 @@
 body{
-    background-color:#a8aeb96c;
-    
+background-image: url(RESİMLER/girişarka.jpg);   
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+background-attachment: fixed;
 }
 .login-form {
     width: 600px;
@@ -8,7 +11,7 @@ body{
 }
 .login-form form {
     margin-bottom: 15px;
-    background: #f7f7f7;
+    background: #f7f7f7a1;
     box-shadow: 0px 4px 4px rgba(16, 16, 22, 0.678);
     padding: 45px;
     border-radius: 2px;
