--- a/sehrimstil.css
+++ b/sehrimstil.css
@@ -1,14 +1,16 @@
 body{
     background-color: rgba(169, 169, 169, 0.338);  
 }
+
 .anabaşlık{
-    background-color: rgba(124, 159, 35, 0.234);
+    background-color:rgba(201,179,122,255);
     background-size: cover;	
     font-style: italic;
+    font-family: fantasy;
 }
 a{
     color: brown;
-text-decoration: underline;
+    text-decoration: underline;
 }
 a:hover{
     color: black;
