--- a/iletişimstiil.css
+++ b/iletişimstiil.css
@@ -3,4 +3,16 @@ body {
 }
 span{
     color: red;
+    font-size:smaller;
+    margin-top: 0px;
+    padding-top: 0px;
 }
+label{
+    color:#9d6d21ea;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+footer{
+	text-align: end;
+	padding-right:20px;
+  }
