--- a/Mirasımızstil.css
+++ b/Mirasımızstil.css
@@ -15,13 +15,13 @@ h3{
 }
 
   a{
-    color: blue;
+    color: rgb(17, 17, 111);
   }
 .tanıtım{
   background-color: rgba(255, 255, 255, 0.663);
   border-radius: 10px;
   box-shadow: 0px 5px 5px 0px rgba(16, 16, 22, 0.585);
-  
+  padding:  10px;;
 }
 p{
   color: black;
