--- a/sehrimstil.css
+++ b/sehrimstil.css
@@ -1,6 +1,9 @@
 body{
     background-color: rgba(169, 169, 169, 0.338);  
 }
+.menü{
+    background-color: rgba(88, 88, 88, 0.426);
+  }
 
 .anabaşlık{
     background-color:rgba(201,179,122,255);
@@ -10,7 +13,6 @@ body{
 }
 a{
     color: brown;
-    text-decoration: underline;
 }
 a:hover{
     color: black;
