--- a/anasayfastil.css
+++ b/anasayfastil.css
@@ -2,14 +2,11 @@ body {
   background-color: rgba(169, 169, 169, 0.338);  
 
 }
-.menü{
-  background-color: rgba(88, 88, 88, 0.426);
-  padding: 10px;
-}
 
 .başlık{
   background-color:#7d7976;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
 }
 h3{
   color: sienna;
