--- a/ilgialanlarımstil.css
+++ b/ilgialanlarımstil.css
@@ -2,6 +2,12 @@ body{
     font-family: 'Inter', sans-serif;
     background-color: #292929;
 }
+
+h1{
+    color:#8e8195;
+    font-family: fantasy;
+    text-decoration:underline ;
+}
 #movie-search-box{
     background-color:whitesmoke;
     height: 25%;
@@ -9,7 +15,7 @@ body{
     margin-left: 10px;
 }
 #result-grid{
-    margin-top: 120px;
+    margin-top: 80px;
 }
 
 a{
@@ -18,6 +24,7 @@ a{
 img{
     width: 50%;
     display: block;
+    margin: auto;
 }
 
 .search-container{
@@ -96,7 +103,7 @@ img{
 
 /* movie result */
 .result-container{
-    padding: 20px 0;
+    padding: 0px 0;
 }
 .movie-poster img{
     max-width: 300px;
@@ -104,7 +111,7 @@ img{
     
 }
 .movie-info{
-    text-align: center;
+    text-align:left;
     color: #fff;
     padding-top: 1px;
 }
@@ -117,21 +124,15 @@ img{
 .movie-misc-info{
     list-style-type: none;
     display: flex;
-    padding: 1rem;
 }
 .movie-info .year{
     font-weight: 500;
-}
-.movie-info .rated{
-    background-color: var(--yellow-color);
-    padding: 0.4rem;
-    margin: 0 0.4rem;
-    border-radius: 3px;
-    font-weight: 600;
+    
 }
 .movie-info .released{
     font-size: 0.9rem;
     opacity: 0.9;
+    margin: 1px auto;
 }
 .movie-info .writer{
     padding: 0.5rem;
@@ -140,7 +141,8 @@ img{
 .movie-info .genre{
     background-color: var(--light-dark-color);
     display: inline-block;
-    padding: 0.5rem;
+    padding: 2px;
+    margin-left: 7px;
     border-radius: 3px;
 }
 .movie-info .plot{
@@ -160,46 +162,10 @@ img{
     margin: 1rem 0.7rem 0 0;
 }
 
-@media(max-width: 450px){
-    .logo p{
-        font-size: 1.4rem;
-    }
-    .search-element .form-control{
-        width: 90%;
-        margin: 0 auto;
-        padding: 0.5rem 1rem;
-    }
-    .search-element h3{
-        font-size: 1.4rem;
-    }
-    .search-list{
-        width: 90%;
-        right: 50%;
-        -webkit-transform: translateX(50%);
-            -ms-transform: translateX(50%);
-                transform: translateX(50%);
-    }
-    .search-list .search-list-item{
-        width: 100%;
-    }
-    .movie-misc-info{
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-    }
-    .movie-misc-info li:nth-child(2){
-        margin: 0.8rem 0;
-    }
-}
+
 
 @media(min-width: 800px){
-    .search-element{
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-                flex-direction: row;
-    }
+
     .search-element h3{
         margin-bottom: 0;
     }
@@ -212,9 +178,7 @@ img{
         padding-top: 0;
     }
     .movie-info .movie-misc-info{
-        -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
+
         padding-left: 0;
     }
     .movie-info .plot{
