--- a/sehrimstil.css
+++ b/sehrimstil.css
@@ -1,5 +1,7 @@
 body{
     background-color: rgba(169, 169, 169, 0.338);  
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 .anabaşlık{
