--- a/cvstil.css
+++ b/cvstil.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgba(169, 169, 169, 0.338);  
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
 .sol{
@@ -20,7 +21,7 @@ footer{
 }
 h1{
   color: black;
-  font-family:serif
+  font-family:sans-serif
   
 }
 hr{
