--- a/girisstil.css
+++ b/girisstil.css
@@ -1,5 +1,5 @@
 body{
-background-image: url(RESİMLER/girişarka.jpg);   
+background-image: url(RESİMLER/loginarka.jpg);   
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center center;
