--- a/anasayfastil.css
+++ b/anasayfastil.css
@@ -16,6 +16,12 @@ h3{
 p ,dd{
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+#kartbaşlık{
+  color: rgba(17, 17, 69, 0.86);
+  text-decoration: none;
+
+}
+
 footer{
 	text-align: end;
 	padding-right:20px;
